# TinyCC

./: CMakeLists.txt
libtcc/: CMakeLists.txt
